# Speed-Run

./: .gitignore  Cargo.toml  Makefile  README-lsat.md  SKILL-build.md  SKILL-lsat-eval.md  SKILL-lsat-parity.md  SKILL-protobuf-backend.md  SKILL-sync-conflict.md  lsat-taxonomy.yaml  package.json  playwright.offline.config.ts
docs/: Anki-for-LSAT-PRD.md  Speedrun_AI_Features.md  Speedrun_Research_Support.md  ai-card-pipeline.md  brainlift-ai-feature.md  brainlift.md  demo-script.md  improvements-log.md  installer-verification.md  mcp-setup.md  models.md  offline-sync-recording.txt  offline-sync-recording.webm  verification.md
docs/eval/: README.md  console.txt  manifest.json  metrics.json  report.md
docs/research/: R1-perceptual-learning.md  R2-error-trap-analysis.md  rc-judgment-staging.md
eval/: __init__.py  ablation.py  adherence.py  answer_change.py  assumption_discrimination.py  baselines.py  blind_review.py  calibration.py  card_check.py  choke_validity.py  conditional.py  conditional_chain.py  config.py  evil_twin.py  exam_schedule.py  fatigue.py  feedback.py  growth.py  leakage.py  metrics.py  paraphrase.py  performance.py  quantifier.py  run.py  rush.py  score_map.py  split.py  stem_polarity.py  transfer.py  triage_leak.py  worked_example.py
ftl/core/: card-templates.ftl  deck-config.ftl  errors.ftl  exporting.ftl  importing.ftl  media-check.ftl  notetypes.ftl  preferences.ftl  profiles.ftl  scheduling.ftl  sync.ftl
ftl/qt/: about.ftl  addons.ftl  errors.ftl  profiles.ftl  qt-accel.ftl  qt-misc.ftl
lsat/: __init__.py  adherence.py  answer_change.py  api.py  assumption_discrimination.py  bench.py  blind_review.py  conditional.py  conditional_chain.py  contrast.py  dashboard_data.py  deck_content.py  error_patterns.py  events.py  evil_twin.py  exam_schedule.py  fatigue.py  grading.py  growth.py  interleaving.py  misconceptions.py  notetypes.py  pacing.py  primitives.py  quantifier.py  relearning.py  retrieval.py  section_runner.py  seed.py  selection.py  stem_polarity.py  taxonomy.py  triage.py  worked_example.py
lsat/ai/: __init__.py  checker.py  client.py  generator.py  gold_set.py  misconception.py  pipeline.py  prompts.py
lsat/docs/: points-at-stake-rust-change.md
lsat/models/: __init__.py  calibration.py  fluency.py  memory.py  performance.py  projections.py  readiness.py
lsat/server/: Dockerfile  README.md  __init__.py  __main__.py  app.py  run.sh  selftest.py  wsgi.py
mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
mobile/resources/: README.md
mobile/www/: index.html
proto/anki/: scheduler.proto
pylib/tests/: test_schedv3.py
qt/aqt/: __init__.py  about.py  addons.py  ankihub.py  (+18 more)
qt/installer/app/: pyproject.toml
qt/installer/app/src/prep/: __main__.py
research/: 01-memory-retrieval.md  02-transfer-schema.md  03-metacognition-srl.md  04-adaptive-psychometrics-lsat.md  BRIEF.md  README.md  ai-features-for-faster-prep.md
sync/: README.md  offline_demo.py  validate.py
ts/: vite.config.ts
(+81 files in other folders)
