[project]
requires-python = ">=3.10"

# This project was generated with 0.3.26 using template: https://github.com/beeware/briefcase-template @ v0.3.26
[tool.briefcase]
project_name = "LSAT Prep"
bundle = "com.lsat"
url = "https://lsatprep.app"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
author = "LSAT Prep"

[tool.briefcase.app.prep]
formal_name = "LSAT Prep"
description = "Professional LSAT preparation software"
long_description = """LSAT Prep is a focused LSAT study system: honest, evidence-earned scores, oracle-verified logic drills, and diagnostics that show exactly how you get questions wrong."""
sources = [
  "src/prep",
]
icon = "resources/lsatprep"
cleanup_paths = [
  # document_type icons
  "lsatprep-*.ico",
  "**/lsatprep-*.icns",
  # Qt WebEngine debug-symbol resources
  "**/*.debug.pak",
  "**/*.debug.bin",
  # Type-checker stubs / markers
  "**/*.pyi",
  "**/py.typed",
  # PyQt6 binding sources / API completion files
  "**/*.sip",
  "**/PyQt6/bindings/**/*.toml",
  "**/PyQt6/Qt6/qsci",
  # pywin32 dev/help bundles
  "**/PyWin32.chm",
  "**/pythonwin",
  "**/adodbapi",
  "**/isapi",
  "**/win32com/HTML",
  "**/win32com/demos",
  "**/win32com/makegw",
  "**/win32com/include",
  "**/win32com/libs",
  "**/win32com/readme.html",
  # Vendored test suites
  "**/test",
  "**/tests",
  # Packaging metadata
  "**/*.dist-info/INSTALLER",
  "**/*.dist-info/RECORD",
  "**/*.dist-info/WHEEL",
  # Console scripts
  "**/app_packages/bin/*",
]
console_app = false
use_full_install_path = false

permission.microphone = "The microphone will only be used when you tap the record button."
permission.camera = "Add-ons may access your camera."

[tool.briefcase.app.prep.macOS]
universal_build = false
min_os_version = "13.0"
entitlement."com.apple.security.cs.allow-jit" = true
entitlement."com.apple.security.cs.disable-executable-page-protection" = true
entitlement."com.apple.security.cs.allow-dyld-environment-variables" = true
entitlement."com.apple.security.device.audio-input" = true

[tool.briefcase.app.prep.linux.flatpak]
supported = false

[tool.briefcase.app.prep.windows]

[tool.briefcase.app.prep.iOS]
supported = false

[tool.briefcase.app.prep.android]
supported = false

[tool.briefcase.app.prep.web]
supported = false

[tool.briefcase.app.prep.document_type.apkg]
description = "LSAT Prep deck package"
extension = "apkg"
icon = "resources/lsatprep"
mime_type = "application/x-apkg"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.prep.document_type.colpkg]
description = "LSAT Prep collection package"
extension = "colpkg"
icon = "resources/lsatprep"
mime_type = "application/x-colpkg"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.prep.document_type.ankiaddon]
description = "LSAT Prep add-on package"
extension = "ankiaddon"
icon = "resources/lsatprep"
mime_type = "application/x-ankiaddon"
macOS.CFBundleTypeRole = "Editor"
